got calculator to work

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Astro Weight Calculator</title>
   </head>
   <body>
-     <!-- Write your markup here  -->
+     <input type="number" name="weight lbs" id="user-weight" />
+     <select id="planets"></select>
+     <p id="output"></p>
+     <button id="calculate-button" onclick="handleClickEvent()">Calculate!</button>
 
     <script src="main.js" charset="utf-8"></script>
   </body>
